# mpv-cmake-example

./: CMakeLists.txt  README.md  simple.cpp
mpv/: libmpv-2.def  libmpv-2.exp  libmpv-2.lib
